# practical_mlflow

./: .gitignore  Basic sentiment classifier.ipynb  Makefile  README.md  rest_api_requests.http
Practical-Deep-Learning-at-Scale-with-MLFlow/chapter01/: first_dl.py
Practical-Deep-Learning-at-Scale-with-MLFlow/chapter02/: first_dl_with_mlflow.py
Practical-Deep-Learning-at-Scale-with-MLFlow/chapter03/: dl_model-non-auto-tracking.ipynb  dl_model_tracking.ipynb
Practical-Deep-Learning-at-Scale-with-MLFlow/chapter04/: MLproject  conda.yaml  main.py  requirements.txt  run.sh
Practical-Deep-Learning-at-Scale-with-MLFlow/chapter05/: conda.yaml  main.py  model_registry_demo.py  requirements.txt  run.sh
Practical-Deep-Learning-at-Scale-with-MLFlow/chapter06/: requirements.txt
Practical-Deep-Learning-at-Scale-with-MLFlow/chapter07/: build_custom_model.sh  build_inference_pipeline.sh  conda.yaml  main.py  run.sh  run_multistep_model.sh
Practical-Deep-Learning-at-Scale-with-MLFlow/chapter08/: build_sagemaker.sh  conda-batch-inference.yaml  conda.yaml  create_conda_env.sh  export_spark_vars.sh  (+3 more)
age_gender/: Makefile  README.md
basics/: Basic sentiment classifier.ipynb  Makefile  README.md  first_dl_with_mlflow.py
demo/: README.md
experiment_tracking/: mlflow_experiment_tracking.ipynb  requirements.txt
mlflow_docker_setup/: Makefile  README.md
mlflow_projects/: MLproject  README.md  conda.yaml  main.py  run.sh
quickstart/: mlflow_tracking.py
rust_mlflow_rest_api_demo/: .gitignore  Cargo.toml  models.db
rust_mlflow_rest_api_demo/src/: main.rs  model.rs
(+167 files in other folders)
