[package]
name = "rust_mlflow_rest_api_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
pickledb = "0.5.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
rust-s3 = { version = "0.32.3", features = ["no-verify-ssl", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
